@@ -559,3 +559,6 @@ leecher
 6881l
 NOTSENT
 LOWAT
+tls11
+tls12
+tls13
