@@ -38,6 +38,7 @@ POSSIBILITY OF SUCH DAMAGE.
 #define _FILE_OFFSET_BITS 64
 
 #include <boost/config.hpp>
+#include <boost/version.hpp>
 
 #include "libtorrent/aux_/disable_warnings_pop.hpp"
 
@@ -566,6 +567,14 @@ constexpr std::size_t TORRENT_WRITE_HANDLER_MAX_SIZE = 342;
 #	define TORRENT_HAS_ARM_CRC32 0
 #endif
 #endif // TORRENT_HAS_ARM_CRC32
+
+#ifndef TORRENT_USE_TLS13
+#if BOOST_VERSION >= 106900
+#define TORRENT_USE_TLS13 1
+#else
+#define TORRENT_USE_TLS13 0
+#endif
+#endif
 
 namespace libtorrent {}
 
