@@ -94,6 +94,7 @@ libtorrent_rasterbar_la_SOURCES = \
   magnet_uri.cpp                  \
   merkle.cpp                      \
   natpmp.cpp                      \
+  openssl.cpp                     \
   parse_url.cpp                   \
   part_file.cpp                   \
   pe_crypto.cpp                   \
