@@ -50,6 +50,9 @@ POSSIBILITY OF SUCH DAMAGE.
 #include "libtorrent/aux_/disable_warnings_push.hpp"
 #include <boost/asio/ip/host_name.hpp>
 #include <boost/asio/ip/multicast.hpp>
+#ifdef TORRENT_USE_OPENSSL
+#include <boost/asio/ssl/context.hpp>
+#endif
 #include "libtorrent/aux_/disable_warnings_pop.hpp"
 
 #include <cstdlib>
@@ -112,7 +115,13 @@ upnp::upnp(io_service& ios
 	, m_listen_address(listen_address)
 	, m_netmask(netmask)
 	, m_device(std::move(listen_device))
+#ifdef TORRENT_USE_OPENSSL
+	, m_ssl_ctx(ssl::context::sslv23_client)
+#endif
 {
+#ifdef TORRENT_USE_OPENSSL
+	m_ssl_ctx.set_verify_mode(ssl::context::verify_none);
+#endif
 }
 
 void upnp::start()
@@ -418,7 +427,13 @@ void upnp::connect(rootdevice& d)
 		d.upnp_connection = std::make_shared<http_connection>(m_io_service
 			, m_resolver
 			, std::bind(&upnp::on_upnp_xml, self(), _1, _2
-				, std::ref(d), _4));
+				, std::ref(d), _4), true, default_max_bottled_buffer_size
+			, http_connect_handler()
+			, http_filter_handler()
+#ifdef TORRENT_USE_OPENSSL
+			, &m_ssl_ctx
+#endif
+			);
 		d.upnp_connection->get(d.url, seconds(30), 1);
 	}
 	TORRENT_CATCH (std::exception const& exc)
@@ -813,7 +828,12 @@ void upnp::update_map(rootdevice& d, port_mapping_t const i)
 			, m_resolver
 			, std::bind(&upnp::on_upnp_map_response, self(), _1, _2
 				, std::ref(d), i, _4), true, default_max_bottled_buffer_size
-			, std::bind(&upnp::create_port_mapping, self(), _1, std::ref(d), i));
+			, std::bind(&upnp::create_port_mapping, self(), _1, std::ref(d), i)
+			, http_filter_handler()
+#ifdef TORRENT_USE_OPENSSL
+			, &m_ssl_ctx
+#endif
+			);
 
 		d.upnp_connection->start(d.hostname, d.port
 			, seconds(10), 1, nullptr, false, 5, m.local_ep.address());
@@ -825,7 +845,12 @@ void upnp::update_map(rootdevice& d, port_mapping_t const i)
 			, m_resolver
 			, std::bind(&upnp::on_upnp_unmap_response, self(), _1, _2
 				, std::ref(d), i, _4), true, default_max_bottled_buffer_size
-			, std::bind(&upnp::delete_port_mapping, self(), std::ref(d), i));
+			, std::bind(&upnp::delete_port_mapping, self(), std::ref(d), i)
+			, http_filter_handler()
+#ifdef TORRENT_USE_OPENSSL
+			, &m_ssl_ctx
+#endif
+			);
 		d.upnp_connection->start(d.hostname, d.port
 			, seconds(10), 1, nullptr, false, 5, m.local_ep.address());
 	}
@@ -1037,7 +1062,12 @@ void upnp::on_upnp_xml(error_code const& e
 		, m_resolver
 		, std::bind(&upnp::on_upnp_get_ip_address_response, self(), _1, _2
 			, std::ref(d), _4), true, default_max_bottled_buffer_size
-		, std::bind(&upnp::get_ip_address, self(), std::ref(d)));
+		, std::bind(&upnp::get_ip_address, self(), std::ref(d))
+		, http_filter_handler()
+#ifdef TORRENT_USE_OPENSSL
+		, &m_ssl_ctx
+#endif
+		);
 	d.upnp_connection->start(d.hostname, d.port
 		, seconds(10), 1);
 }
